# RecruitFlow

./: .env.example  .gitignore  README.md  Smart_Job_Portal_Proposal_Saad_Ali_Khan.docx  docker-compose.yml  main.py  pyproject.toml  skills-lock.json  test_graph.py  test_interview_ws.py  test_langgraph_start.py  test_resume.py  test_ws.py
app/api/endpoints/: interview.py  resume.py
app/models/: schemas.py
app/services/: interview_graph.py  llm_service.py  pdf_service.py
docs/: 01_project_overview.md  02_architecture_design.md  03_database_schema.md  04_api_contracts.md  05_development_roadmap.md  06_design.md  07_setup_guide.md
frontend/: .env.example  build_output.txt  next.config.ts  package-lock.json  package.json
frontend/.stitch/designs/: applicant-pipeline.html  candidate-analysis.html  dashboard-employer.html  dashboard-seeker.html  find-jobs.html  landing-page.html  login.html  mock-interview.html  post-job.html  profile.html  signup.html
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260505194750_initial_schema/: migration.sql
frontend/prisma/migrations/20260505195834_add_ai_feedback_and_fix_relations/: migration.sql
frontend/prisma/migrations/20260506223700/: migration.sql
frontend/prisma/migrations/20260506234314_add_notifications/: migration.sql
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/data/: mockData.ts
frontend/src/lib/: api.ts  auth.ts  mail.ts  prisma.ts
frontend/src/types/: next-auth.d.ts
modal/: resume_analyzer.py  setup.sh
(+51 files in other folders)
